# hello-rust-pulumi

./: .gitignore  Makefile  Pulumi.yaml  README.md  index.ts  package-lock.json  package.json
.github/workflows/: pull_request.yml  push.yml
hello-lambda/: Cargo.toml
